Fixed team section overlapping mission section on mobile

--- a/src/components/pages/index/team-section.module.scss
+++ b/src/components/pages/index/team-section.module.scss
@@ -8,7 +8,7 @@
 
 .infinite-scroll-content {
     white-space: nowrap;
-    font-size: 4rem;
+    font-size: 5rem;
     font-weight: lighter;
     color: var.$vpw-darker-blue;
     display: inline-block;
