--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -32,6 +32,10 @@ a {
     height: 120vh;
 }
 
+.vh-md-100 {
+    height: auto;
+}
+
 .vh-75 {
     height: 75vh;
 }
@@ -49,10 +53,14 @@ a {
 }
 
 .mt-md-10 {
-    margin-top: 0 !important;
+    margin-top: 0;
 }
 
 @include media-breakpoint-up(md) {
+    .vh-md-100 {
+        height: 100vh !important;
+    }
+
     .mt-md-10 {
         margin-top: 10rem !important;
     }
